--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://rsms.me/inter/inter.css><link rel=icon href=/favicon.ico><title>cyrillic_design</title><link href=/css/app.37d47034.css rel=preload as=style><link href=/css/chunk-vendors.e544b611.css rel=preload as=style><link href=/js/app.33c4e696.js rel=preload as=script><link href=/js/chunk-vendors.b0b79266.js rel=preload as=script><link href=/css/chunk-vendors.e544b611.css rel=stylesheet><link href=/css/app.37d47034.css rel=stylesheet></head><body><noscript><strong>We're sorry but cyrillic_design doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.b0b79266.js></script><script src=/js/app.33c4e696.js></script></body></html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=//rsms.me/inter/inter.css><link rel=icon href=/favicon.ico><title>Кириллица · дизайн</title><meta name=description content="Собираем сайты на кириллице с отличным UI/UX дизайном"><meta property=og:title content="Кириллица · дизайн"><meta property=og:image content=/open.png><link href=/css/app.53b4e0a6.css rel=preload as=style><link href=/css/chunk-vendors.e544b611.css rel=preload as=style><link href=/js/app.518ee125.js rel=preload as=script><link href=/js/chunk-vendors.c52aca2e.js rel=preload as=script><link href=/css/chunk-vendors.e544b611.css rel=stylesheet><link href=/css/app.53b4e0a6.css rel=stylesheet></head><body><noscript><strong>We're sorry but cyrillic_design doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script>(function(m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function() {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
+
+      ym(46932000, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true
+      });</script><noscript><div><img src=https://mc.yandex.ru/watch/46932000 style="position:absolute; left:-9999px;" alt=""></div></noscript><script src=/js/chunk-vendors.c52aca2e.js></script><script src=/js/app.518ee125.js></script></body></html>
