--- a/index.html
+++ b/index.html
@@ -1,25 +1,91 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Regular.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Medium.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Bold.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Thin.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/inter.css as=style crossorigin><link rel=icon href=//cyrillic.design/assets/favicon.ico><title>Кириллица.дизайн</title><meta name=description lang=ru content="Собираем сайты на кириллице с отличным UI/UX дизайном"><meta name=description lang=en content="Showcase of the best Cyrillic websites with daily updates"><meta property=og:title content="Кириллица · дизайн"><meta property=og:image content=//cyrillic.design/assets/open.png><link href=//cyrillic.design/assets/css/app.d4720372.css rel=preload as=style><link href=//cyrillic.design/assets/css/chunk-vendors.e544b611.css rel=preload as=style><link href=//cyrillic.design/assets/js/app.cd0055d1.js rel=preload as=script><link href=//cyrillic.design/assets/js/chunk-vendors.66565a2d.js rel=preload as=script><link href=//cyrillic.design/assets/css/chunk-vendors.e544b611.css rel=stylesheet><link href=//cyrillic.design/assets/css/app.d4720372.css rel=stylesheet></head><body><noscript><strong>We're sorry but cyrillic_design doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script>(function(m, e, t, r, i, k, a) {
-        m[i] =
-          m[i] ||
-          function() {
-            (m[i].a = m[i].a || []).push(arguments);
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Regular.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Medium.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Bold.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/Inter-Thin.woff2 as=font type=font/woff2 crossorigin><link rel=preload href=//cyrillic.design/assets/fonts/Inter/inter.css as=style crossorigin><link rel=icon href=//cyrillic.design/assets/favicon.ico><title>Кириллица.дизайн</title><meta name=description content="Собираем сайты на кириллице с отличным UI/UX дизайном"><meta property=og:title content="Кириллица · дизайн"><meta property=og:image content=//cyrillic.design/assets/open.png><link href=//cyrillic.design/assets/css/app.aa43975c.css rel=preload as=style><link href=//cyrillic.design/assets/css/chunk-vendors.e544b611.css rel=preload as=style><link href=//cyrillic.design/assets/js/app.5fc860a3.js rel=preload as=script><link href=//cyrillic.design/assets/js/chunk-vendors.66565a2d.js rel=preload as=script><link href=//cyrillic.design/assets/css/chunk-vendors.e544b611.css rel=stylesheet><link href=//cyrillic.design/assets/css/app.aa43975c.css rel=stylesheet></head><body><noscript><strong>We're sorry but cyrillic_design doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script>(function(c, a) {
+        if (!a.__SV) {
+          var b = window;
+          try {
+            var d,
+              m,
+              j,
+              k = b.location,
+              f = k.hash;
+            d = function(a, b) {
+              return (m = a.match(RegExp(b + "=([^&]*)"))) ? m[1] : null;
+            };
+            f &&
+              d(f, "state") &&
+              ((j = JSON.parse(decodeURIComponent(d(f, "state")))),
+              "mpeditor" === j.action &&
+                (b.sessionStorage.setItem("_mpcehash", f),
+                history.replaceState(
+                  j.desiredHash || "",
+                  c.title,
+                  k.pathname + k.search
+                )));
+          } catch (n) {}
+          var l, h;
+          window.mixpanel = a;
+          a._i = [];
+          a.init = function(b, d, g) {
+            function c(b, i) {
+              var a = i.split(".");
+              2 == a.length && ((b = b[a[0]]), (i = a[1]));
+              b[i] = function() {
+                b.push([i].concat(Array.prototype.slice.call(arguments, 0)));
+              };
+            }
+            var e = a;
+            "undefined" !== typeof g ? (e = a[g] = []) : (g = "mixpanel");
+            e.people = e.people || [];
+            e.toString = function(b) {
+              var a = "mixpanel";
+              "mixpanel" !== g && (a += "." + g);
+              b || (a += " (stub)");
+              return a;
+            };
+            e.people.toString = function() {
+              return e.toString(1) + ".people (stub)";
+            };
+            l = "disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(
+              " "
+            );
+            for (h = 0; h < l.length; h++) c(e, l[h]);
+            var f = "set set_once union unset remove delete".split(" ");
+            e.get_group = function() {
+              function a(c) {
+                b[c] = function() {
+                  call2_args = arguments;
+                  call2 = [c].concat(Array.prototype.slice.call(call2_args, 0));
+                  e.push([d, call2]);
+                };
+              }
+              for (
+                var b = {},
+                  d = ["get_group"].concat(
+                    Array.prototype.slice.call(arguments, 0)
+                  ),
+                  c = 0;
+                c < f.length;
+                c++
+              )
+                a(f[c]);
+              return b;
+            };
+            a._i.push([b, d, g]);
           };
-        m[i].l = 1 * new Date();
-        (k = e.createElement(t)),
-          (a = e.getElementsByTagName(t)[0]),
-          (k.async = 1),
-          (k.src = r),
-          a.parentNode.insertBefore(k, a);
-      })(
-        window,
-        document,
-        "script",
-        "https://mc.yandex.ru/metrika/tag.js",
-        "ym"
-      );
-
-      ym(46932000, "init", {
-        clickmap: true,
-        trackLinks: true,
-        accurateTrackBounce: true,
-      });</script><noscript><div><img src=https://mc.yandex.ru/watch/46932000 style="position:absolute; left:-9999px;" alt=""></div></noscript><script src=//cyrillic.design/assets/js/chunk-vendors.66565a2d.js></script><script src=//cyrillic.design/assets/js/app.cd0055d1.js></script></body></html>
+          a.__SV = 1.2;
+          b = c.createElement("script");
+          b.type = "text/javascript";
+          b.async = !0;
+          b.src =
+            "undefined" !== typeof MIXPANEL_CUSTOM_LIB_URL
+              ? MIXPANEL_CUSTOM_LIB_URL
+              : "file:" === c.location.protocol &&
+                "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)
+              ? "https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js"
+              : "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";
+          d = c.getElementsByTagName("script")[0];
+          d.parentNode.insertBefore(b, d);
+        }
+      })(document, window.mixpanel || []);
+      mixpanel.init("e5e529a641b88e5f3638a1686c678843", {
+        batch_requests: true,
+      });</script><script src=//cyrillic.design/assets/js/chunk-vendors.66565a2d.js></script><script src=//cyrillic.design/assets/js/app.5fc860a3.js></script></body></html>
